Remove large CSV file and update .gitignore
- Remove creditcard.csv (143.84 MB) from git tracking due to GitHub size limits
- Update .gitignore to exclude CSV files
- Dataset should be downloaded separately or stored in Git LFS

--- a/.gitignore
+++ b/.gitignore
@@ -64,8 +64,9 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-# Data files (optional - uncomment if you don't want to track large data files)
-# *.csv
+# Data files (large files excluded from git)
+*.csv
+creditcard.csv
 # *.json
 # *.pickle
 # *.pkl
